# mutual-fund

./: .env  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.local.yaml  pyproject.toml  ruff.toml
app/: main.py
app/api/: router.py
app/auth/: deps.py  models.py  router.py  schemas.py  service.py
app/core/: config.py  scheduler.py  security.py
app/core/database/: db.py  deps.py
app/data/: mf.json
app/funds/: models.py  router.py  schemas.py  service.py
app/lib/: client.py
app/portfolio/: models.py  router.py  schemas.py  service.py
migrations/: env.py
migrations/versions/: 400c988bf30c_portfolio_and_investments_tables.py  5f8db85225d1_add_user_mutual_fund_family_and_scheme_.py  b61931614e7f_create_a_baseline_migrations.py
