[project]
name = "mutual-fund"
version = "0.1.0"
description = "Mutual Fund API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.36",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.8.5",
]

[tool.mypy]
strict = true
exclude = ["venv", ".venv"]
